# FlemingModelResultAnalysis

./: .gitignore  1d_ift.ipynb  README.md  analyze_stn_voltage.ipynb  burst_generation.ipynb  cortical_collaterals.ipynb  ctx_lfp.ipynb  data_viewer.py  ift_data_viewer.py  ift_vs_pi.ipynb  lfp_amplitude vs network_size.ipynb  pd_beta_ld_beta.ipynb  plot_IFT.ipynb  plot_constant_dbs_effect_on_beta.ipynb  plot_lfp_params.ipynb  plot_results.ipynb  plot_utils.py  process_simulation_output.ipynb  save_simulation_params_to_spreadsheet.ipynb  test_filter.ipynb
cbgplot/: pyproject.toml
cbgplot/src/cbgplot/: plot.py
